--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,7 @@ button{
 
 .card-footer{
   padding: 10px;
+  display: flex;
 }
 
 .lead{
@@ -146,10 +147,6 @@ footer{
   flex-direction: row;
 }
 
-.flex-align-space{
-  justify-content: space-between;
-}
-
 .margin-auto{
   margin:auto;
 }
@@ -208,9 +205,29 @@ nav li{
   list-style-type: none;
 }
 
-nav.mainNav li{
+.main-nav{
+  margin-top:12px;
+}
+
+.main-nav li{
   display: inline;
   padding: 0 33px;
+  color: #000;
+}
+
+.main-nav a{
+  text-decoration: none;
+}
+
+.footer li{
+  line-height: 1.3;
+}
+
+.footer a{
+  color: #fff
+}
+.footer a:hover{
+  color: #f4ce14
 }
 
 .highlights img{
@@ -223,8 +240,42 @@ nav.mainNav li{
   background-color: #495E57;
 }
 
-.specials .card-image img{  
+.specials .card-image img{
   height: 185px;
+}
+
+.specials-parent, .testimonials-parent{
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  gap: 2em;
+}
+
+.testimonials{
+  margin-top : 3em;
+  margin-bottom : 3em;
+  text-align: center;
+}
+
+.testimonials h2{
+  margin-bottom: 1em;
+}
+
+.rating{
+  text-align: center;
+  margin-top: 1em;
+}
+
+.star-small{
+  font-size: 16px;
+}
+
+.star-medium{
+  font-size: 24px;  
+}
+
+.star-large{
+  font-size: 40px;
 }
 
 .double-image {
@@ -276,4 +327,7 @@ nav.mainNav li{
                          "main main main"
                          "footer footer footer";
   } 
+
 }
+
+
